# moonlight-ios

./: .gitignore  .gitmodules  .gitmodules.save  .travis.yml  Launch Screen.xib  Mac.storyboard  README.md  appveyor.yml  iPad.storyboard  iPhone.storyboard
.github/: lock.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
BuildScripts/: build-libopus.sh
Limelight/: AppDelegate.h  AppDelegate.m  Limelight-Info.plist  Limelight-Prefix.pch  ToolBarContainerView.h  ToolBarContainerView.m  UIAppView.h  UIAppView.m  UIComputerView.h  UIComputerView.m  iPad.storyboard  iPhone.storyboard  main.m
Limelight/Crypto/: CryptoManager.m  mkcert.c
Limelight/Database/: DataManager.h  DataManager.m  Settings.h  Settings.m  TemporaryApp.h  TemporaryApp.m  TemporaryHost.h  TemporaryHost.m  TemporarySettings.h  TemporarySettings.m
Limelight/Input/: AbsoluteTouchHandler.h  AbsoluteTouchHandler.m  Controller.h  Controller.swift  ControllerSupport.h  ControllerSupport.m  CustomTapGestureRecognizer.h  CustomTapGestureRecognizer.m  HapticContext.h  HapticContext.m  KeyboardInputField.h  KeyboardInputField.m  KeyboardMovementProfile.h  KeyboardMovementProfile.m  KeyboardSupport.h  KeyboardSupport.m  LayoutOnScreenControls.h  LayoutOnScreenControls.m  NativeTouchHandler.h  NativeTouchHandler.m  NativeTouchPointer.h  NativeTouchPointer.m  OSCProfile.h  OSCProfile.m  OSCProfilesManager.h  OSCProfilesManager.m  OnScreenButtonState.h  OnScreenButtonState.m  OnScreenControls.h  OnScreenControls.m  PassthroughTouchHandler.h  PassthroughTouchHandler.m  RelativeTouchHandler.h  RelativeTouchHandler.m  StreamView.h  StreamView.m  StreamView.m.orig  TextFieldKeyboardDelegate.h  TextFieldKeyboardDelegate.m
Limelight/Limelight.xcdatamodeld/: .xccurrentversion
Limelight/moonlight-common/moonlight-common-c/: .gitignore  .gitmodules  CMakeLists.txt  README.md
Limelight/moonlight-common/moonlight-common-c/reedsolomon/: rs.c  rs.h
Limelight/moonlight-common/moonlight-common-c/src/: ByteBuffer.h  ConnectionTester.c  FakeCallbacks.c  InputStream.c  Limelight.h  Platform.c  PlatformSockets.c  PlatformSockets.h  PlatformThreads.h  RecorderCallbacks.c  RtpAudioQueue.h  RtpVideoQueue.c  RtspConnection.c  RtspParser.c  SdpGenerator.c  SimpleStun.c  Video.h  VideoDepacketizer.c  VideoStream.c
Moonlight TV/: Info.plist  main.m
Moonlight macOS/: AppDelegate.h  AppDelegate.m
Moonlight macOS.xcodeproj/: project.pbxproj
Moonlight tvOS/: Info.plist  main.m  tvosStory.storyboard
Moonlight-ZWM.xcodeproj/: project.pbxproj  project.pbxproj.orig
Moonlight.xcodeproj/: project.pbxproj  project_BACKUP_64293.pbxproj  project_LOCAL_64293.pbxproj
MoonlightUnitTests/: MoonlightUnitTests.swift
Shelf/: ContentProvider.swift  Shelf.entitlements
libs/: Build-OpenSSL.txt
(+202 files in other folders)
